# neuroquant

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  TODO.md  compose.production.yaml  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_0001_initial_schema.py  20260310_0002_import_pipeline_foundation.py
backend/app/: main.py  seed.py
backend/app/api/v1/: audit_log.py  auth.py  dashboard.py  health.py  imports.py  income.py  margin.py  performance.py  positions.py  risk.py  router.py  strategies.py  system.py  trades.py
backend/app/core/: config.py  dependencies.py  logging.py  metrics.py  observability.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/repositories/: domain_repository.py  margin_repository.py  trade_repository.py  user_repository.py
backend/app/schemas/: common.py  domain.py  margin.py  trade.py
backend/app/services/: analytics_service.py  audit_service.py  auth_service.py  margin_service.py  roll_detection.py
backend/app/services/imports/: __init__.py  contracts.py  import_service.py
backend/app/services/imports/parsers/: base.py  registry.py  sample_trade_csv.py
backend/app/tasks/: celery_app.py  jobs.py
backend/tests/: test_api_integration.py  test_import_parser.py  test_margin_service.py  test_migration_sanity.py  test_roll_detection.py
docs/: architecture.md  backend.md  backups.md  calculation-engine.md  data-model.md  deployment.md  design-system.md  frontend.md  (+9 more)
(+61 files in other folders)
